Fixed the sun eyes on mobile

--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,7 @@ h3 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: transform 0.05s ease-out;
+    transition: transform 0.3s ease-out;
 }
 
 .pupil::after {
